--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "react-scripts": "3.4.1",
     "react-transition-group": "^1.2.1"
 	},
-	"homepage": "http://civilquiz.laeeto.com",
+	"homepage": "https://freeaid.org",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
