--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "csvtojson": "^2.0.10",
     "prop-types": "^15.6.2",
     "react": "^16.13.1",
+    "react-adsense": "^0.1.0",
     "react-dom": "^16.13.1",
     "react-popover": "^0.5.10",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-transition-group": "^1.2.1"
-	},
-	"homepage": "https://freeaid.org",
+  },
+  "homepage": "https://freeaid.org",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
