--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": false,
   "dependencies": {
     "csvtojson": "^2.0.10",
+    "github-pages": "^3.0.2",
     "prop-types": "^15.6.2",
     "react": "^16.13.1",
     "react-adsense": "^0.1.0",
